--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "text-utils",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://the-zoomeee.github.io/text-utils",
+  "homepage": "http://the-zoomeee.github.io/textChef",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
